Final demo version

--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -3,14 +3,14 @@
   "We value your privacy." : "Uw privacy is belangrijk voor ons.",
   "Our application does not store any personal information, therefore your data is guaranteed to be safe!": "Deze applicatie verzamelt geen persoonlijke informatie. Daarom is uw data gegarandeerd veilig.",
   "It's simple!": "Het is simpel!",
-  "Scan a QR code to check in at a place!": "Scan een QR-code om bij een restaurant in te checken.",
+  "Scan a QR code to check in at a place!": "Scan een QR-code om bij een restaurant in te checken!",
   "Get notified!": "Krijg een notificatie!",
   "If you have been in contact with an active case of Covid-19, you will be notified!": "Als u in contact bent geweest met iemand die het coronavirus draagt, wordt u op de hoogte gesteld!",
-  "Show GGD key": "Toon de GGD-code.",
-  "Scan QR code": "Scan de QR-code.",
+  "Show GGD key": "Toon de GGD-code",
+  "Scan QR code": "Scan de QR-code",
   "Press the button below to read a QR code with your phone camera!": "Druk op de onderstaande knop om een QR-code te scannen!",
   "Have you been in contact with anyone sick with Covid-19 in the last 14 days?": "Bent u in de afgelopen 14 dagen in contact geweest met iemand die positief getest is voor Covid-19?",
-  "Do you have any Covid-19 symptoms? (fever, coughing, etc.)": "Heeft u symptomen die horen bij Covid-19? (koorts, hoesten, etc.",
+  "Do you have any Covid-19 symptoms? (fever, coughing, etc.)": "Heeft u symptomen die horen bij Covid-19? (koorts, hoesten, etc.)",
   "In case you have been tested positive for Covid-19, please follow the steps below.": "Indien u positief bent getest voor Covid-19, moet u de volgende stappen volgen.",
   "Give the code below to a GGD employee": "Geef de onderstaande code aan een GGD-medewerker.",
   "Wait until the code is being entered and verified": "Wacht totdat de code ingevuld en geverifieerd is.",
